# prinfo

./: .gitignore  INSTALL_SKILL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/tasks/commit-export/: ANALYSIS.md  PLAN.md  REQUEST.md
docs/tasks/initial/: INITIAL_PROMPT.md  PRD.md  TASKS.md
docs/tasks/prtest/: REQUEST.md  RESULTS.md  TASKS.md
docs/tasks/skill/: claude_skills_guide.md  prinfo.md
docs/tasks/windows-export-hardening/: ANALYSIS.md  PLAN.md  REQUEST.md
skills/prinfo/: SKILL.md
skills/prinfo/references/: commands.md  outputs.md  troubleshooting.md
src/prinfo/: __init__.py  __main__.py  cli.py  config.py  exporter.py  gh.py
tests/: test_cli.py  test_config.py  test_exporter.py  test_gh.py
